<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_show_map"
        android:orderInCategory="100"
        android:title="@string/action_show_map"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_map_white_24" />
    <item
        android:id="@+id/action_my_places_list"
        android:orderInCategory="100"
        android:title="@string/action_my_places_list"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_list_white_24" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_info_white_24" />
</menu>