<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="elfakrs.mosis.vitaminc.myplaces.MainActivity">
    <item
        android:id="@+id/action_show_map_item"
        android:orderInCategory="100"
        android:title="@string/action_show_map"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_map_white_24" />
    <item
        android:id="@+id/action_new_place_item"
        android:orderInCategory="100"
        android:title="@string/action_new_place"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_white_24" />
    <item
        android:id="@+id/action_about_item"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_info_white_24" />
</menu>