<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".First2Fragment"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_my_place_name_label" />

    <EditText
        android:id="@+id/editMyPlace_editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_my_place_description_label" />

    <EditText
        android:id="@+id/editMyPlace_editText_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_lat"
            android:layout_width="37dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_my_place_lat_label" />

        <EditText
            android:id="@+id/editMyPlace_editText_latitude"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView_lot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_my_place_lon_label" />

        <EditText
            android:id="@+id/editMyPlace_editText_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/editMyPlace_button_locatiion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_my_place_location_label" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/editMyPlace_button_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/edit_my_place_finish_label" />

        <Button
            android:id="@+id/editMyPlace_button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/edit_my_place_cancel_label" />
    </TableRow>
</TableLayout>
</LinearLayout>