<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".First3Fragment"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_my_place_name_label" />

    <TextView
        android:id="@+id/viewMyPlace_textView_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_my_place_description_label" />

    <TextView
        android:id="@+id/viewMyPlace_textView_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/viewMyPlace_button_finished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewMyPlace_button_finished" />
</LinearLayout>